--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     </header>
 </head>
 <body>
-    
+    <main>
+        <video autoplay muted>
+            <source src="excursion.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+
+        <h2>Your personal travel guide</h2>
+    </main>
 </body>
 </html>
