--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         </video>
 
         <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+        
     </main>
+    <footer>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+        <h2>Coming Soon for iPhone and Android</h1>
+        <a href ="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Download Excursion (Coming soon!)</a>
+        <p id="company_name">&copy; Excursion</p>
+    </footer>
 </body>
 </html>
